# cumplo-tailor

./: CLAUDE.md  Makefile  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: lint.yml  pr-title.yml
cumplo_tailor/: main.py
cumplo_tailor/controllers/: channels.py  users.py
cumplo_tailor/integrations/: cloud_credentials.py
cumplo_tailor/routers/: channels.py  credentials.py  filters.py  subscriptions.py
cumplo_tailor/routers/users/: private.py  public.py
cumplo_tailor/utils/: constants.py  dictionary.py
