[tool.poetry]
name = "cumplo-tailor"
version = "1.2.0"
description = "A configuration service that empowers users to customize their investment preferences and notification settings"
authors = ["Cristobal Sfeir <cnsfeir@uc.cl>"]
packages = [{ include = "cumplo_tailor" }]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.28.1"
arrow = "^1.2.3"
pydantic = "^2.1.1"
python-dotenv = "^1.0.0"
google-cloud-logging = "^3.5.0"
fastapi = "^0.109.1"
uvicorn = "^0.23.1"
google-api-python-client = "^2.158.0"
google-auth = "^2.37.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
cumplo-common = { version = "^1.12.7", source = "cumplo-pypi" }

[tool.poetry.dev-dependencies]
ruff = "^0.8.0"
basedpyright = ">=1.0"
docformatter = "^1.7.5"

[[tool.poetry.source]]
name = "cumplo-pypi"
url = "https://us-central1-python.pkg.dev/cumplo-scraper/cumplo-pypi/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 120
target-version = "py313"
preview = true
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",                              # allow typing.Any
  "D107",                                # no docstring required in __init__
  "D212", "D203",                        # docstring-layout style choices
  "D104",                                # no docstring required in public package
  "G004",                                # allow f-strings in logging
  "S113",                                # allow requests without explicit timeout
  "DOC201", "DOC501", "DOC402",          # don't force return/raise/yield docs
  "COM812", "ISC001",                    # defer to the formatter (avoid conflicts)
  "CPY001",                              # no copyright header
  "TRY003", "TRY300", "TRY301",          # relaxed exception-message/flow rules
  "EM101", "EM102",                      # allow literals / f-strings in exceptions
  "RUF012",                              # class vars without ClassVar
  "S101",                                # allow assert
  "BLE001",                              # allow broad except Exception
  "TC006",                               # cast without quotes
  "B904",                                # raise without from
  "RUF005",                              # allow list concat
  "TD002", "TD003", "FIX002", "FIX004",  # allow TODO/HACK comments
  "RET503",                              # allow implicit None return
  "ERA001",                              # allow commented-out code
  "RUF018",                              # assert on walrus
  "PGH003",                              # allow blanket pyright ignores
  "PLW3201",                             # dunder method naming
  "SLF001",                              # access to private attributes
  "FAST002",                             # FastAPI dependency without Annotated (we are FastAPI)
  "B008",                                # function call in defaults, e.g. Depends(...) (FastAPI)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ANN201", "ANN001", "ANN202", "D100", "PLC0415", "PLC2701", "ARG001"]
"tests/**/*_test.py" = ["D101", "D103", "D102", "D205", "FBT001", "PLR2004", "PLR6301", "PT019", "RUF029"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.docformatter]
pre-summary-newline = true
wrap-descriptions = 120
wrap-summaries = 120
recursive = true
blank = true
